KiA-Examples/fixtures/external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service # must match the name in the external-service fixture
subsets:
  - addresses: # IPs of the endpoints that the service will forward connections to
    - ip: 11.11.11.11 
    - ip: 22.22.22.22
  - ports:
    - port: 80 # target port of the endpoints
