KiA-Examples/fixtures/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: someapi.somecompany.com # FQDN of the actual service
  ports:
  - port: 80
