KiA-Examples/fixtures/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  tls:
  - hosts:
    - kubia.example.com # TLS connections will be accepted for the kubia.example.com hostname
    secretName: tls-secret # private key and cert obtained from the tls-secret created previously
  rules:
  - host: kubia.example.com # maps this domain name to your service
    http:
      paths:
      - path: / # all requests will be sent to port 80 of kubia-nodeport
        backend:
          serviceName: kubia-nodeport # Cloud providers require this to point to a NodePort service but that's not a requirement of Kubernetes itself
          servicePort: 80
