KiA-Examples/fixtures/mongodb-pod-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  volumes:
  - name: mongodb-data
    hostPath: # TODO find spec and complete
      pdName: mongodb # TODO find spec and complte
      fsType: ext4 # ...
  containers:
  - image: mongo
    name: mongodb
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db
    ports:
    - containerPort: 27017
      protocol: TCP
